objects/Toro_QuoteItem_SubLine__c.object
<CustomObject>
    <fields>
        <fullName>Apply_Support_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AwardPercent__c</fullName>
        <description>% of Total Award Dollars. This field is used in &quot;Total Award Dollars&quot; pricing method calculation only.</description>
        <label>Award %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Award_Price__c</fullName>
        <label>AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNet_Price_2__c</fullName>
        <description>DNet_Price_2 will be populated from within a trigger</description>
        <label>DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNet_Price__c</fullName>
        <label>DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Store product name/description during support plus process</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exlcude Sublines from Rebate calculations</description>
        <label>EXC RBT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Percentage__c</fullName>
        <label>Fee Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FreezePricing__c</fullName>
        <formula>Quote_Item_Sub_Line__r.REVVY__FreezePricing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freeze Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Percent__c</fullName>
        <label>GP%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSRP_Price__c</fullName>
        <label>MSRP</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Style__c</fullName>
        <description>Misc style to help some operations such as set text of a field to &quot;No Charge&quot; in client side</description>
        <label>Misc Style</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Part Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Off_MSRP__c</fullName>
        <description>Percent Off MSRP</description>
        <label>% Off MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_DNet__c</fullName>
        <description>Percent of DNet</description>
        <label>% of DNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PricingMethodValue__c</fullName>
        <label>Pricing Method Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID2__c</fullName>
        <label>Product ID2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>Quote_Item_Sub_Line__r.REVVY__Catalog_Node__r.REVVY__Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MODEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Quote_Item_Sub_Line__r.REVVY__Catalog_Node__r.REVVY__LocaleName_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DESCRIPTION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>Toro Quote Item Sub Lines</relationshipLabel>
        <relationshipName>Toro_Quote_Item_Sub_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>Quote_Item_Sub_Line__r.REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Item_Sub_Line__c</fullName>
        <label>Quote Item Sub Line</label>
        <referenceTo>REVVY__MnQuoteItemSubLine__c</referenceTo>
        <relationshipLabel>Toro Quote Item Sub Lines</relationshipLabel>
        <relationshipName>Toro_Quote_Item_Sub_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rebate_as_of_DNet__c</fullName>
        <description>Rebate as % of DNet</description>
        <label>RBT%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Plus_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Support Plus Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPP_DNET__c</fullName>
        <label>TPP DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TPP_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TPP Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toro_DNet_Price__c</fullName>
        <label>EXT  DNET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Award_DNet_Price__c</fullName>
        <label>Extended Award DNet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Award_MSRP_Price__c</fullName>
        <label>Extended Award MSRP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Award_Price__c</fullName>
        <label>EXT AWARD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_MSRP_Price__c</fullName>
        <label>EXT MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Extended_Qty__c</fullName>
        <label>Extended Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toro_Fee_Amount__c</fullName>
        <label>Setup Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toro_Product_Tier__c</fullName>
        <formula>Quote_Item_Sub_Line__r.REVVY__Catalog_Node__r.Toro_Product_Tier__c</formula>
        <label>Toro Product Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toro_Quantity__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toro_Quote_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Item</label>
        <referenceTo>Toro_QuoteItem__c</referenceTo>
        <relationshipLabel>Toro Quote Item Sub Lines</relationshipLabel>
        <relationshipName>Toro_Quote_Item_Sub_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Toro_Subline_Rebate__c</fullName>
        <label>Subline Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Award_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate that Unit Award has been overridden by user</description>
        <label>Unit Award Overridden</label>
        <type>Checkbox</type>
    </fields>
    <label>Toro Quote Item Sub Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TQS-{00000}</displayFormat>
        <label>Toro Quote Item Sub Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toro Quote Item Sub Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>